# AoC2021

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
src/day_1/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs
src/day_14/: mod.rs
src/day_15/: mod.rs
src/day_16/: mod.rs
src/day_17/: mod.rs
src/day_18/: mod.rs
src/day_19/: mod.rs
src/day_2/: mod.rs
src/day_20/: mod.rs
src/day_21/: mod.rs
src/day_22/: mod.rs
src/day_23/: mod.rs
src/day_24/: mod.rs
src/day_25/: mod.rs
src/day_3/: mod.rs
src/day_4/: mod.rs
src/day_5/: mod.rs
src/day_6/: mod.rs
src/day_7/: mod.rs
src/day_8/: mod.rs
src/day_9/: mod.rs
src/helpers/: mod.rs
