[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Rupert Rutledge <1982481+Eosis@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
argh = "0.1.4"
bit-vec = "0.6.3"
bitvec = "0.22.3"
cached = "0.26.2"
counter = "0.5.2"
hashbrown = "0.9.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
num = "0.3.1"
peeking_take_while = "1.0.0"
regex = "1.5.4"
